# iNotes

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
backend/: .env  .gitignore  Cargo.toml  README  README.md  notes.db
backend/src/: errors.rs  main.rs
backend/src/api/: auth.rs  category.rs  note.rs  user.rs
backend/src/db/: auth.rs  category.rs  mod.rs  note.rs  user.rs
backend/src/models/: note.rs  response.rs  user.rs
backend/src/state/: state.rs
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_scaffold.dart  editor_page.dart  main.dart
lib/core/: boxes.dart
lib/core/config/: theme.dart
lib/core/models/: category.dart  note.dart  response.dart
lib/core/models/note/: note.dart  note.g.dart
lib/core/provider/auth/: auth_bloc.dart  auth_event.dart  (+1 more)
lib/core/service/: api_client.dart  cache_service.dart  log_service.dart
lib/core/utils/: api_client.dart  log_service.dart
lib/pages/: home.dart
lib/view/: main_view.dart
lib/view/pages/: add_category_page.dart  auth.dart  category_selector_sheet.dart  favorite.dart  home.dart  notes_view.dart  profile.dart  search.dart
lib/view/utilities/: colors.dart  extensions.dart  utils.dart
mobile/: pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/view/: main_view.dart
src/: main.rs
src/api/: auth.rs  category.rs  mod.rs  note.rs  user.rs
src/db/: auth.rs  mod.rs  note.rs  user.rs
src/models/: category.rs  mod.rs  note.rs  response.rs  user.rs
src/state/: state.rs
src/utils/: color.rs  file.rs  mod.rs
(+77 files in other folders)
