[package]
name = "inotes-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.12.7"
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rusqlite = "0.32.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
actix-multipart = "0.7.2"
thiserror = "1.0.63"
actix-files = "0.6.6"
futures = "0.3.30"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
jsonwebtoken = "9.3.0"